--- a/Preperation ZImbra.adoc
+++ b/Preperation ZImbra.adoc
@@ -4,6 +4,10 @@
 ----
 dnf install ansible-core
 ----
+* Jalankan perintah berikut untuk installasi Ansbibel di Ubuntu
+----
+dnf install ansible-core
+----
 
 * Buat directory terpisah misal preperation Zimbra
 
