--- a/Preperation ZImbra.adoc
+++ b/Preperation ZImbra.adoc
@@ -1,10 +1,10 @@
-= Pre peration Zimbra Rocky 9/8 dan Ubuntu 22 ansible 
+= Pre peration Zimbra Rocky 9/8 dan Ubuntu 22 Via Ansible 
 
 * Jalankan perintah berikut untuk installasi Ansible dirocky 
 ----
 dnf install ansible-core
 ----
-* Jalankan perintah berikut untuk installasi Ansbible di Ubuntu
+* Jalankan perintah berikut untuk installasi Ansible di Ubuntu
 ----
 dnf install ansible-core
 ----
