--- a/Preperation ZImbra.adoc
+++ b/Preperation ZImbra.adoc
@@ -23,7 +23,7 @@ wget -c https://raw.githubusercontent.com/afatyoo/script-master/refs/heads/main/
 
 ----
 [zimbra]
-192.168.13.24 ansible_user=root hostname=mail domain=afatyo.web.id ip_address=192.168.13.24
+192.168.13.24 ansible_user=root hostname=mail domain=afatyo.web.id ip_address=192.168.13.24 gateway=192.168.10.250
 ----
 
 * Lalu jalankan perintah untuk mulai preperation nya:
