--- a/Directory Ansible Carbonio CE Install/README.adoc
+++ b/Directory Ansible Carbonio CE Install/README.adoc
@@ -14,13 +14,13 @@ The playbook simplifies and speeds up the installation process by making it cons
 
 == ⚙️ Usage
 
-. *Edit the Inventory*  
+* *Edit the Inventory*  
 Prepare an inventory file (e.g., `inventoryname`) and adjust it according to your node setup. +
 
 For detailed guidance, check this article:  
 👉 https://afatyo.web.id/menyiapkan-inventory-carbonio-dengan-ansible/[Preparing an Inventory for Carbonio with Ansible] +
 
-. *Run the Playbook*  
+* *Run the Playbook*  
 Execute the following command to start the installation:
 
 [source,bash]
@@ -28,7 +28,7 @@ Execute the following command to start the installation:
 ansible-playbook /zxbot/carbonio_install/playbooks/carbonio_install.yml -i inventoryname -u root
 ----
 
-. *Wait for Completion*  
+* *Wait for Completion*  
 The installation process will run automatically.  
 Please make sure your connection is stable and the target servers meet the required specifications.
 
